recursion.cons.lessons.recursion.cons.Min.scala.error
min:9: error: not found: value n
	return lambda(l,n)
                        ^