recursion.cons.lessons.recursion.cons.Min.scala.code
def min(l:List[Int]): Int = {
	def lambda(l:List[Int],n:Int): Int = {
		if(l.tail == Nil)
		return n
		if(l.head > n)
		return lambda(l.tail,n)
		else return lambda(l.tail,l.head)
	}
	return lambda(l,n)
}
